# urnc

./: .buildinfo  .codecov.yml  .cspell.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  changelog.html  configuration.html  contributing.html  documentation.html  example.ipynb  genindex.html  index.html  installation.html  modules.html  objects.inv  placeholders.html  py-modindex.html  pyproject.toml  pyrightconfig.json  search.html  searchindex.js  tag.sh  testing.html  urnc.html  urnc.preprocessor.html  usage.html  website-generation.html
.github/workflows/: codecov.yaml  pages.yaml  publish-docker-image.yaml  publish.yaml  publish_pypi.yaml  test.yaml
_sources/: changelog.md.txt  configuration.md.txt  documentation.rst.txt  genindex.rst.txt  index.rst.txt  installation.rst.txt  urnc.preprocessor.rst.txt  urnc.rst.txt
_sources/commands/: check.md.txt  ci.md.txt  convert.md.txt  index.rst.txt  init.md.txt
_static/: documentation_options.js
commands/: check.html  ci.html  clone.html  convert.html  execute.html  index.html  init.html  pull.html  student.html  version.html
container/: Dockerfile
docs/: Makefile
docs/internal/: jc_todos.md  live_coding.md  live_coding_commands.bash  v3_ideas.md
docs/source/: api.rst  changelog.md  changelog.rst  commands.md  conf.py  configuration.md  contributing.md  contributing.rst  documentation.rst  index.rst  installation.md  installation.rst  modules.rst  placeholders.md  testing.rst  urnc.preprocessor.rst  urnc.rst  usage.md  usage.rst  v3_ideas.md  website-generation.md
docs/source/_templates/: custom-module-template.rst
docs/source/commands/: clone.md  convert.md  execute.md  index.rst  init.md  pull.md  student.md  version.md
src/urnc/: convert.py  main.py  util.py
test/: Example.ipynb  Example.out.ipynb
test/.ipynb_checkpoints/: Example.out-checkpoint.ipynb
test/in/: Example.ipynb
test/in/.ipynb_checkpoints/: Example-checkpoint.ipynb
tests/: conftest.py  test_add_tags.py  test_ci.py  test_clone_student_repo.py  test_config.py  test_convert.py  test_execute.py  test_find.py  test_init.py  test_main.py  test_merge_dict.py  test_pull.py  test_read_config.py  test_solution.py  test_student.py  test_util.py  test_version.py
tests/courses/data-science-output/: stdout_expected.txt
tests/courses/developer-skills-output/: stdout_expected.txt
tests/courses/minimal/: config.yaml  lecture-1.ipynb
tests/courses/minimal-student/: lecture-1.ipynb
tests/courses/urnc-example-course-public-expected/: .gitignore
tests/courses/urnc-example-course-public-expected/lectures/: 02_urnc_usage.ipynb  04_getting_help.ipynb
tests/expected/minimal-course-converted--with-solution-dirs/lectures/: urnc.ipynb
tests/expected/minimal-course-converted/lectures/: fibonacci-solution.ipynb  (+2 more)
tests/expected/minimal-course-student/: config.yaml
tests/regression_tests/: test_urnc_student.py
tests/unit_tests/: test_add_tags.py  test_config.py  test_conftest_get_urnc_root.py  test_execute.py  test_image.py  test_is_solution.py  test_solution.py  test_urnc_ci_ci.py  test_urnc_ci_clone_student_repo.py  test_urnc_convert_convert.py  test_urnc_convert_get_nb_paths.py  test_urnc_main_version.py  test_urnc_prepocessor_solutions_SolutionRemover.py  test_urnc_prepocessor_solutions_remove_skeleton_lines.py  test_urnc_util_read_config.py  test_version.py
urnc/: __init__.py  __main__.py  ci.py  config.py  convert.py  convert_.py  edit.py  execute.py  format.py  git.py  init.py  logger.py  main.py  pull.py  run.py  student.py  test.py  util.py  version.py
urnc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
urnc/preprocessor/: __init__.py  add_tags.py  assignments.py  broken_links.py  check_outputs.py  clear_outputs.py  clear_tagged.py  executor.py  exercises.py  image.py  lint.py  remove_solutions.py  solutions.py  util.py
(+10 files in other folders)
