[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "urnc*",
]

[project]
name = "urnc"
version = "2.0.12"
authors = [
    { name = "Michael Huttner", email = "michael@mhuttner.com" },
    { name = "Tobias Schmidt", email = "tobias.schmidt331@gmail.com" },
]
description = "A package to convert UR FIDS jupyter notebooks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click >= 8.1.3",
    "python-dateutil >= 2",
    "GitPython >= 3.1.31",
    "nbconvert >= 7.16.6",
    "semver >= 3.0.1",
    "ruamel.yaml >= 0.18.4",
    "requests >= 2.31.0",
    "papermill >= 2.4.0",
]

[project.scripts]
urnc = "urnc.main:main"

[project.urls]
Homepage = "https://spang-lab.github.io/urnc"
Source = "https://github.com/spang-lab/urnc"
"Bug Tracker" = "https://github.com/spang-lab/urnc/issues"

[tool.pytest.ini_options]
filterwarnings = [
  'ignore:.*Jupyter is migrating its paths',
  'ignore:.*utcnow\(\) is deprecated'
]
